Update NLP for Disaster tweets

--- a/Kaggle/NLP for Disaster Tweets/Script.ipynb
+++ b/Kaggle/NLP for Disaster Tweets/Script.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "e2a3f073",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:06:53.404187Z",
-     "start_time": "2022-05-20T11:06:52.584929Z"
+     "end_time": "2022-05-20T17:32:08.391673Z",
+     "start_time": "2022-05-20T17:32:08.385319Z"
     }
    },
    "outputs": [],
@@ -15,17 +15,27 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import f1_score, make_scorer\n",
+    "from sklearn import pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "4bc87365",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:07:26.318228Z",
-     "start_time": "2022-05-20T11:07:26.273216Z"
+     "end_time": "2022-05-20T17:01:19.976666Z",
+     "start_time": "2022-05-20T17:01:19.939714Z"
     }
    },
    "outputs": [],
@@ -37,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "56db10d2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:07:30.392631Z",
-     "start_time": "2022-05-20T11:07:30.354712Z"
+     "end_time": "2022-05-20T17:01:19.986078Z",
+     "start_time": "2022-05-20T17:01:19.978106Z"
     }
    },
    "outputs": [
@@ -135,7 +145,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,12 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "d32243fe",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:07:35.177506Z",
-     "start_time": "2022-05-20T11:07:35.168335Z"
+     "end_time": "2022-05-20T17:01:19.995625Z",
+     "start_time": "2022-05-20T17:01:19.987535Z"
     }
    },
    "outputs": [
@@ -231,7 +241,7 @@
        "4  11     NaN      NaN      Typhoon Soudelor kills 28 in China and Taiwan"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,12 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "580b2197",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:07:41.624908Z",
-     "start_time": "2022-05-20T11:07:41.616887Z"
+     "end_time": "2022-05-20T17:01:20.004931Z",
+     "start_time": "2022-05-20T17:01:19.997802Z"
     }
    },
    "outputs": [
@@ -315,7 +325,7 @@
        "4  11       0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,12 +336,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "4329a2d3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:10:25.478566Z",
-     "start_time": "2022-05-20T11:10:25.468217Z"
+     "end_time": "2022-05-20T17:01:20.009021Z",
+     "start_time": "2022-05-20T17:01:20.005984Z"
     }
    },
    "outputs": [
@@ -341,7 +351,7 @@
        "((7613, 5), (3263, 4))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,12 +362,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "id": "e73c7cd4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:12:05.197479Z",
-     "start_time": "2022-05-20T11:12:05.190320Z"
+     "end_time": "2022-05-20T17:01:20.013255Z",
+     "start_time": "2022-05-20T17:01:20.010942Z"
     }
    },
    "outputs": [],
@@ -369,12 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "id": "1f7f2025",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:13:01.025997Z",
-     "start_time": "2022-05-20T11:13:01.009639Z"
+     "end_time": "2022-05-20T17:01:20.018780Z",
+     "start_time": "2022-05-20T17:01:20.014797Z"
     }
    },
    "outputs": [],
@@ -385,12 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "id": "98b05986",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:22:57.393195Z",
-     "start_time": "2022-05-20T11:22:57.386255Z"
+     "end_time": "2022-05-20T17:01:20.025222Z",
+     "start_time": "2022-05-20T17:01:20.019928Z"
     }
    },
    "outputs": [],
@@ -402,12 +412,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "id": "d6a8a500",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-05-20T11:22:57.662039Z",
-     "start_time": "2022-05-20T11:22:57.648085Z"
+     "end_time": "2022-05-20T17:01:20.032994Z",
+     "start_time": "2022-05-20T17:01:20.026315Z"
     }
    },
    "outputs": [
@@ -427,8 +437,476 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "876c18db",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:01:20.036383Z",
+     "start_time": "2022-05-20T17:01:20.034427Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# We'll start with basic model i.e tfidf and logistic regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "420d44b7",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:02:39.295806Z",
+     "start_time": "2022-05-20T17:02:38.527688Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tfv = TfidfVectorizer(min_df=1,\n",
+    "                      max_features=None,\n",
+    "                      strip_accents=\"unicode\",\n",
+    "                      analyzer=\"word\",\n",
+    "                      token_pattern=r'\\w{1,}',\n",
+    "                      ngram_range=(1, 3),\n",
+    "                      use_idf=1,\n",
+    "                      smooth_idf=1,\n",
+    "                      sublinear_tf=1,\n",
+    "                      stop_words=\"english\")\n",
+    "\n",
+    "tfv.fit(list(X_train[\"text\"]) + list(X_valid[\"text\"]))\n",
+    "X_train_tfv = tfv.transform(X_train[\"text\"])\n",
+    "X_valid_tfv = tfv.transform(X_valid[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "050f9c42",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:14:35.398427Z",
+     "start_time": "2022-05-20T17:14:34.429482Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6428027418126429\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_model = LogisticRegression()\n",
+    "logistic_model.fit(X_train_tfv, y_train)\n",
+    "logistic_tfidf = f1_score(y_valid, logistic_model.predict(X_valid_tfv))\n",
+    "print(logistic_tfidf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "10164b99",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:17:04.936578Z",
+     "start_time": "2022-05-20T17:17:04.228462Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "ctv = CountVectorizer(analyzer=\"word\",\n",
+    "                      token_pattern=r\"\\w{1,}\",\n",
+    "                      ngram_range=(1, 3),\n",
+    "                      stop_words=\"english\")\n",
+    "\n",
+    "ctv.fit(list(X_train[\"text\"]) + list(X_valid[\"text\"]))\n",
+    "X_train_ctv = ctv.transform(X_train[\"text\"])\n",
+    "X_valid_ctv = ctv.transform(X_valid[\"text\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "193ff02a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:17:37.740688Z",
+     "start_time": "2022-05-20T17:17:36.559125Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7216216216216216\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_model = LogisticRegression()\n",
+    "logistic_model.fit(X_train_ctv, y_train)\n",
+    "logistic_ctv = f1_score(y_valid, logistic_model.predict(X_valid_ctv))\n",
+    "print(logistic_ctv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "063d9056",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:23:25.632450Z",
+     "start_time": "2022-05-20T17:23:25.616246Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6911225238444607\n"
+     ]
+    }
+   ],
+   "source": [
+    "naive_bayes_model = MultinomialNB()\n",
+    "naive_bayes_model.fit(X_train_tfv, y_train)\n",
+    "naive_bayes_tfv = f1_score(y_valid, naive_bayes_model.predict(X_valid_tfv))\n",
+    "print(naive_bayes_tfv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "11e14b46",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:23:52.634090Z",
+     "start_time": "2022-05-20T17:23:52.613170Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7455410225921522\n"
+     ]
+    }
+   ],
+   "source": [
+    "naive_bayes_model = MultinomialNB()\n",
+    "naive_bayes_model.fit(X_train_ctv, y_train)\n",
+    "naive_bayes_ctv = f1_score(y_valid, naive_bayes_model.predict(X_valid_ctv))\n",
+    "print(naive_bayes_ctv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "8a493079",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:26:29.275702Z",
+     "start_time": "2022-05-20T17:26:27.466064Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.697072838665759\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgboost_model = xgb.XGBClassifier()\n",
+    "xgboost_model.fit(X_train_tfv, y_train)\n",
+    "xgboost_tfv = f1_score(y_valid, xgboost_model.predict(X_valid_tfv))\n",
+    "print(xgboost_tfv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5c905272",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:26:53.204498Z",
+     "start_time": "2022-05-20T17:26:51.716802Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7162162162162161\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgboost_model = xgb.XGBClassifier()\n",
+    "xgboost_model.fit(X_train_ctv, y_train)\n",
+    "xgboost_ctv = f1_score(y_valid, xgboost_model.predict(X_valid_ctv))\n",
+    "print(xgboost_ctv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "f1aeda9d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:28:56.248145Z",
+     "start_time": "2022-05-20T17:28:56.241829Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "f1_scorer = make_scorer(f1_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "efc366bf",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:51:29.268659Z",
+     "start_time": "2022-05-20T17:51:23.881333Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best score: 0.608\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_model_gridsearch = LogisticRegression(solver=\"liblinear\")\n",
+    "\n",
+    "clf = pipeline.Pipeline([('lr', logistic_model_gridsearch)])\n",
+    "\n",
+    "params_grid = {'lr__C': np.linspace(0.1, 1, 10), 'lr__penalty': ['l1', 'l2']}\n",
+    "\n",
+    "model = GridSearchCV(estimator=clf,\n",
+    "                     param_grid=params_grid,\n",
+    "                     scoring=f1_scorer,\n",
+    "                     refit=True,\n",
+    "                     cv=5)\n",
+    "\n",
+    "model.fit(X_train_tfv, y_train)\n",
+    "\n",
+    "print(\"Best score: %0.3f\" % model.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "cd0d2b95",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:53:28.333430Z",
+     "start_time": "2022-05-20T17:53:19.650886Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best score: 0.725\n",
+      "0.7330316742081447\n"
+     ]
+    }
+   ],
+   "source": [
+    "logistic_model_gridsearch = LogisticRegression(solver=\"liblinear\")\n",
+    "\n",
+    "clf = pipeline.Pipeline([('lr', logistic_model_gridsearch)])\n",
+    "\n",
+    "params_grid = {'lr__C': np.linspace(0.1, 1, 10), 'lr__penalty': ['l1', 'l2']}\n",
+    "\n",
+    "model = GridSearchCV(estimator=clf,\n",
+    "                     param_grid=params_grid,\n",
+    "                     scoring=f1_scorer,\n",
+    "                     refit=True,\n",
+    "                     cv=5)\n",
+    "\n",
+    "model.fit(X_train_ctv, y_train)\n",
+    "\n",
+    "print(\"Best score: %0.3f\" % model.best_score_)\n",
+    "logistic_grid_ctv = f1_score(y_valid, model.predict(X_valid_ctv))\n",
+    "print(logistic_grid_ctv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "17d67847",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T18:00:18.944860Z",
+     "start_time": "2022-05-20T18:00:18.709137Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 6 candidates, totalling 12 fits\n",
+      "Best score: 0.726\n",
+      "Best parameters set:\n",
+      "\tnb__alpha: 0.1\n",
+      "0.7389221556886227\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_model = MultinomialNB()\n",
+    "\n",
+    "# Create the pipeline \n",
+    "clf = pipeline.Pipeline([('nb', nb_model)])\n",
+    "\n",
+    "# parameter grid\n",
+    "param_grid = {'nb__alpha': [0.001, 0.01, 0.1, 1, 10, 100]}\n",
+    "\n",
+    "# Initialize Grid Search Model\n",
+    "model = GridSearchCV(estimator=clf, param_grid=param_grid, scoring=f1_scorer,\n",
+    "                                 verbose=10, n_jobs=-1, refit=True, cv=2)\n",
+    "\n",
+    "# Fit Grid Search Model\n",
+    "model.fit(X_train_tfv, y_train)  # we can use the full data here but im only using xtrain. \n",
+    "print(\"Best score: %0.3f\" % model.best_score_)\n",
+    "print(\"Best parameters set:\")\n",
+    "best_parameters = model.best_estimator_.get_params()\n",
+    "for param_name in sorted(param_grid.keys()):\n",
+    "    print(\"\\t%s: %r\" % (param_name, best_parameters[param_name]))\n",
+    "    \n",
+    "nb_grid_tfv = f1_score(y_valid, model.predict(X_valid_tfv))\n",
+    "print(nb_grid_tfv)\n",
+    "\n",
+    "#LB: 0.79344"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "ef2e4a67",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:56:02.285782Z",
+     "start_time": "2022-05-20T17:56:02.058012Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 2 folds for each of 6 candidates, totalling 12 fits\n",
+      "Best score: 0.734\n",
+      "Best parameters set:\n",
+      "\tnb__alpha: 1\n",
+      "0.7455410225921522\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_model = MultinomialNB()\n",
+    "\n",
+    "# Create the pipeline \n",
+    "clf = pipeline.Pipeline([('nb', nb_model)])\n",
+    "\n",
+    "# parameter grid\n",
+    "param_grid = {'nb__alpha': [0.001, 0.01, 0.1, 1, 10, 100]}\n",
+    "\n",
+    "# Initialize Grid Search Model\n",
+    "model = GridSearchCV(estimator=clf, param_grid=param_grid, scoring=f1_scorer,\n",
+    "                                 verbose=10, n_jobs=-1, refit=True, cv=2)\n",
+    "\n",
+    "# Fit Grid Search Model\n",
+    "model.fit(X_train_ctv, y_train)  # we can use the full data here but im only using xtrain. \n",
+    "print(\"Best score: %0.3f\" % model.best_score_)\n",
+    "print(\"Best parameters set:\")\n",
+    "best_parameters = model.best_estimator_.get_params()\n",
+    "for param_name in sorted(param_grid.keys()):\n",
+    "    print(\"\\t%s: %r\" % (param_name, best_parameters[param_name]))\n",
+    "    \n",
+    "nb_grid_ctv = f1_score(y_valid, model.predict(X_valid_ctv))\n",
+    "print(nb_grid_ctv)\n",
+    "# LB: 0.79446"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5fc60c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e96e4ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0c7d080",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24584bcf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f173cd00",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "c1a797ce",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-05-20T17:58:09.903826Z",
+     "start_time": "2022-05-20T17:58:09.788250Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "sample[\"target\"] = model.predict(ctv.transform(test_df[\"text\"]))\n",
+    "sample.to_csv(\"final_submission.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a8b48fc",
    "metadata": {},
    "outputs": [],
    "source": []
